Релиз 1.04. Небольшие стилистические правки.